--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
