--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "terser": "^5.15.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "devDependencies": {
+    "terser-webpack-plugin": "^5.3.6"
   }
 }
