--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "terser": "^5.15.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "graceful-fs": "^4.2.10",
-    "terser-webpack-plugin": "^5.3.6"
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack-cli": "^5.0.1"
   }
 }
